--- a/index.html
+++ b/index.html
@@ -4,21 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilo/estilo.css">
     <title>Actividad1</title>
 </head>
 <body>
     <header>
-        <h1>Domotica 2023</h1>
         <img src="./assets/img/imagen1.jpg"alt= domotica>
+        <h1>Domotica 2023</h1>
+        
     </header>
 <nav>
-<a href="https://e-ficiencia.com/domotica-que-es-y-como-funciona/">¿que es?</a>
+<a href="./pagina/formulario.html">formulario</a>
 </nav>
 <main>
-<h1>Primera actividad de Programación</h1>
+<h1>Segunda actividad de Programación</h1>
+<div>
+    <ul>
+        <li>
+            <h2>
+            Domotica
+            </h2>
+            <ul>
+                <li><a href="https://e-ficiencia.com/domotica-que-es-y-como-funciona/">¿que es?</a></li>
+            </li>
+            </ul>
+        </li>
+        <li>
+            <h2>
+                dispositivos inteligentes que pueden gestionarse y programarse:
+            </h2>
+            <ul>
+                <li>
+                    Puntos de luz: sistemas de luz centralizados o enchufes y bombillas inteligentes que pueden encenderse y apagarse con una orden de voz o autorregularse en función de la presencia del usuario, de la hora del día, de la luz solar...
+                </li>
+                <li>
+                    Electrodomésticos: programar el uso de electrodomésticos en función de las horas de menor coste eléctrico, como la lavadora, el lavaplatos, etc. puede suponer un considerable ahorro energético. 
+                </li>
+                <li>
+                     Equipos de climatización y ventilación: los sistemas de regulación y control en remoto tanto de calderas como de aire acondicionado y ventilación nos permiten ajustar al máximo el consumo energético en base a las rutinas diarias del usuario. 
+                </li>
+                <li>
+                    Persianas y toldos: la gestión inteligente de los sistemas de protección solar permiten aprovechar al máximo la luz y el calor solar o, por el contrario, aislar la vivienda en las horas más calurosas del verano. 
+                </li>
+                <li>
+                    Ventanas y puertas:  detectores y sensores que nos notifican de la apertura de puertas y ventanas. 
+                </li>
+                <li>
+                    Sistemas de riego inteligentes: detecta la humedad del suelo y se enciende el riego si es necesario. 
+                </li>
+                <li>               
+                Sensores de seguridad: detectores de prensencia, detectores de humos,  fugas de gas o inundaciones de agua, los sensores nos notifican una alarma de seguridad directamente en nuestro smartphone. 
+                 </li>            
+            </ul>
+        </li>
+       
+      </ul>
+</div>
+<div>
+
+</div>
 </main>
 <footer>
-<h3>Dabos, Jesica Soleda</h3>
+<h3>Dabos, Jesica Soledad</h3>
 </footer>
 
 </body>
